RESOLVED FIXED158234
SVG content renders in incorrect vertical position when padding-left is not specified
https://bugs.webkit.org/show_bug.cgi?id=158234
Summary SVG content renders in incorrect vertical position when padding-left is not s...
Marco
Reported 2016-05-31 13:55:37 PDT
Created attachment 280177 [details] Test case reduction Found a rendering bug in WebKit related to SVG and padding. If you have an <svg> element inside a <div>, and you specify a non-zero padding-top value for the SVG element, but keep the padding-left property as 0, the element content gets rendered as if padding-top was 0. Specifying a padding-left of 1px makes the rendering normal. The same bug doesn't seem to happen with padding-right. The problem seems to be only related to the rendering of the SVG content, since layout seems to be normal on the Web Inspector. All other major browsers seem to agree on the rendering. (Screenshots below) Attached is a test case reduction for the bug. Rendering in Safari Technology Preview: https://cldup.com/hti9HBL7Df.png Rendering in Firefox: https://cldup.com/N6V1hKJvdL.png Rendering in Chrome: https://cldup.com/B8RxpaeDN2.png Rendering in Edge: https://cldup.com/Y30FAbpYaU.png Layout as per the Safari Technology Preview Web Inspector: https://cldup.com/V4ZCGl0zrC.png
Attachments
Test case reduction (281 bytes, text/html)
2016-05-31 13:55 PDT, Marco
no flags
Patch (4.52 KB, patch)
2016-05-31 15:52 PDT, Said Abou-Hallawa
no flags
Patch (4.49 KB, patch)
2016-06-01 15:08 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2016-05-31 15:52:12 PDT
Said Abou-Hallawa
Comment 2 2016-05-31 17:00:29 PDT
Said Abou-Hallawa
Comment 3 2016-06-01 15:08:21 PDT
WebKit Commit Bot
Comment 4 2016-06-02 11:38:42 PDT
Comment on attachment 280270 [details] Patch Clearing flags on attachment: 280270 Committed r201604: <http://trac.webkit.org/changeset/201604>
WebKit Commit Bot
Comment 5 2016-06-02 11:38:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.