SVG content renders in incorrect vertical position when padding-left is not specified https://bugs.webkit.org/show_bug.cgi?id=158234

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2016-06-02
Reviewed by Darin Adler.

Source/WebCore:

Fix the optimization in RenderSVGRoot::buildLocalToBorderBoxTransform().
Use LayoutSize::isZero() instead of LayoutSize::isEmpty() to decide whether
there is borderAndPadding applied or not.

Test: svg/custom/svg-root-padding-individual.html

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::buildLocalToBorderBoxTransform):

LayoutTests:

Make sure the SVG root element is positioned correctly when either the sum
of its (leftPadding + rightPadding) or the sum of its (topPadding + bottomPadding)
is equal to zero.

* svg/custom/svg-root-padding-individual-expected.html: Added.
* svg/custom/svg-root-padding-individual.html: Added.

Canonical link: https://commits.webkit.org/176391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201604 268f45cc-cd09-0410-ab3c-d52691b4dbfc